--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,18 @@
             <artifactId>gson</artifactId>
             <version>2.8.9</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.sanchezih</groupId>
+            <artifactId>ihs-java-util</artifactId>
+            <version>main-SNAPSHOT</version>
+        </dependency>
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
 
 </project>
